Build all flows in the foreground. Fix import bug in one feature combination

--- a/.github/workflows/interop_tests.yml
+++ b/.github/workflows/interop_tests.yml
@@ -39,6 +39,7 @@ jobs:
       - name: Test interop; full feature set with itself
         run: |
           cd mls-rs/test_harness_integration
+          cargo build
           cargo run -- --port 50001 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --config mls-rs-configs/$config ; done > /dev/null
@@ -47,6 +48,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo run --no-default-features
           cargo run --no-default-features -- --port 50002 &
           cd ../../interop/interop
           test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --public --config mls-rs-configs/bare_bones.json > /dev/null
@@ -56,6 +58,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features private_message,prior_epoch,out_of_order,psk,custom_proposal,by_ref_proposal
           cargo run --no-default-features --features private_message,prior_epoch,out_of_order,psk,custom_proposal,by_ref_proposal -- --port 50002 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --config mls-rs-configs/$config ; done > /dev/null
@@ -65,6 +68,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features tree_index,prior_epoch,out_of_order,psk,custom_proposal,by_ref_proposal
           cargo run --no-default-features --features tree_index,prior_epoch,out_of_order,psk,custom_proposal,by_ref_proposal -- --port 50002 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | grep -v "application"  | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --public --suite 1 --config mls-rs-configs/$config ; done > /dev/null
@@ -74,6 +78,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features tree_index,private_message,out_of_order,psk,custom_proposal,by_ref_proposal
           cargo run --no-default-features --features tree_index,private_message,out_of_order,psk,custom_proposal,by_ref_proposal -- --port 50002 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | grep -Ev "(application_out_of_order_across)|(psk)" | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --config mls-rs-configs/$config ; done > /dev/null
@@ -83,6 +88,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features tree_index,private_message,prior_epoch,psk,custom_proposal,by_ref_proposal
           cargo run --no-default-features --features tree_index,private_message,prior_epoch,psk,custom_proposal,by_ref_proposal -- --port 50002 &
           cd ../../interop/interop
            for config in `ls mls-rs-configs | grep -v "application_out_of_order" | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --config mls-rs-configs/$config ; done > /dev/null
@@ -102,6 +108,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features tree_index,private_message,prior_epoch,out_of_order,psk,by_ref_proposal
           cargo run --no-default-features --features tree_index,private_message,prior_epoch,out_of_order,psk,by_ref_proposal -- --port 50002 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --config mls-rs-configs/$config ; done > /dev/null
@@ -111,6 +118,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
+          cargo build --no-default-features --features tree_index,private_message,prior_epoch,out_of_order,psk,custom_proposal
           cargo run --no-default-features --features tree_index,private_message,prior_epoch,out_of_order,psk,custom_proposal -- --port 50002 &
           cd ../../interop/interop
           for config in `ls mls-rs-configs | grep -E "(application)|(commit_by_value)|(branch)|(welcome_join)" | sed -e "s/mls-rs-configs\///"`; do >&2 echo $config && test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --config mls-rs-configs/$config ; done > /dev/null
