--- a/.github/workflows/interop_tests.yml
+++ b/.github/workflows/interop_tests.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           cd mls-rs/test_harness_integration
           cargo run -- --port 50001 &
-          cargo run --no-default-features
+          cargo build --no-default-features
           cargo run --no-default-features -- --port 50002 &
           cd ../../interop/interop
           test-runner/test-runner --client localhost:50001 --client localhost:50002 --suite 1 --public --config mls-rs-configs/bare_bones.json > /dev/null
