Install nasm (required to build aws-lc)

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -16,6 +16,8 @@ jobs:
           version: "25.x"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
+      - uses: ilammy/setup-nasm@v1
+        if: runner.os == 'Windows'
       - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - run: vcpkg install openssl:x64-windows-static-md
