--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -20,7 +20,7 @@ jobs:
         if: runner.os == 'Windows'
       - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
-      - run: vcpkg install openssl:x64-windows-static-md
+      - run: vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
         if: runner.os == 'Windows'
       - run: echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
