--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -7,7 +7,7 @@ jobs:
   BuildAndTest:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
@@ -16,6 +16,18 @@ jobs:
           version: "25.x"
           repo-token: ${{ secrets.GITHUB_TOKEN }}
       - uses: dtolnay/rust-toolchain@stable
+      - uses: ilammy/setup-nasm@v1
+        if: runner.os == 'Windows'
+      - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+        if: runner.os == 'Windows'
+      - run: vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
+        if: runner.os == 'Windows'
+      - run: echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
+        if: runner.os == 'Windows'
+      - run: curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
+        if: runner.os == 'Windows'
+      - run: echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
+        if: runner.os == 'Windows'
       - name: Rust Fmt
         run: cargo fmt --all -- --check
       - name: Clippy Full RFC Compliance
@@ -27,9 +39,13 @@ jobs:
       - name: Test Bare Bones
         run: cargo test --no-default-features --features std,test_util  --verbose --workspace
       - name: Test Async Full RFC
-        run: RUSTFLAGS='--cfg mls_build_async' cargo test --lib --test '*' --verbose --features test_util -p mls-rs
+        run: cargo test --lib --test '*' --verbose --features test_util -p mls-rs
+        env:
+          RUSTFLAGS: '--cfg mls_build_async'
       - name: Test Async Bare Bones
-        run: RUSTFLAGS='--cfg mls_build_async' cargo test --no-default-features --lib --test '*' --features std,test_util --verbose -p mls-rs
+        run: cargo test --no-default-features --lib --test '*' --features std,test_util --verbose -p mls-rs
+        env:
+          RUSTFLAGS: '--cfg mls_build_async'
       - name: Examples
         working-directory: mls-rs
         run: cargo run --example basic_usage
