--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -21,7 +21,6 @@ x509 = []
 test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
 
 [dependencies]
-async-trait = "0.1.74"
 mls-rs-codec = { version = "0.4.0", path = "../mls-rs-codec", default-features = false}
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
@@ -38,6 +37,9 @@ serde = { version = "1.0", default-features = false, features = ["alloc", "deriv
 serde_json = { version = "^1.0", optional = true }
 hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
 itertools = { version = "0.12", optional = true }
+
+[target.'cfg(mls_build_async)'.dependencies]
+async-trait = "0.1.74"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
