--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -48,18 +48,15 @@ test_util = []
 benchmark_util = ["test_util", "default", "dep:mls-rs-crypto-openssl"]
 fuzz_util = ["test_util", "default", "dep:once_cell", "dep:mls-rs-crypto-openssl"]
 
-
 [dependencies]
 mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.16.0" }
 mls-rs-identity-x509 = { path = "../mls-rs-identity-x509", default-features = false, version = "0.9.0", optional = true }
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 mls-rs-codec = { version = "0.4.0", path = "../mls-rs-codec", default-features = false}
 thiserror = { version = "1.0.40", optional = true }
-futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
 itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"]}
 enum-iterator = "1.1.3"
 cfg-if = "1"
-async-trait = "0.1.74"
 debug_tree = { version = "0.4.0", optional = true }
 spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "portable_atomic"]}
 portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"]}
@@ -76,10 +73,17 @@ safer-ffi = { version = "0.1.3", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
 
+# Async mode dependencies
+[target.'cfg(mls_build_async)'.dependencies]
+futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
+async-trait = "0.1.74"
+
+[target.'cfg(mls_build_async)'.dev-dependencies]
+futures-test = "0.3.25"
+
 [dev-dependencies]
 assert_matches = "1.5.0"
 criterion = { version = "0.5.1", features = ["async_futures", "html_reports"], default-features = false }
-futures-test = "0.3.25"
 serde_json = "^1.0"
 rand = "0.8"
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
@@ -98,12 +102,6 @@ criterion = { version = "0.5.1", default-features = false, features = ["plotters
 [target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
 mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl", version = "0.7.0"}
 criterion = { version = "0.5.1", features = ["async_futures", "html_reports"] }
-
-# Benchmark crypto engine swaps
-
-[target.'cfg(rustcrypto)'.dependencies]
-mls-rs-crypto-rustcrypto = { path = "../mls-rs-crypto-rustcrypto", version = "0.8.0" }
-
 
 [[example]]
 name = "basic_usage"
