--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -14,7 +14,7 @@ exclude = ["test_data"]
 default = ["std", "rfc_compliant", "fast_serialize"]
 arbitrary = ["std", "dep:arbitrary"]
 fast_serialize = ["mls-rs-codec/preallocate"]
-std = ["mls-rs-codec/std", "zeroize/std", "base64/std", "num_enum/std", "indexmap/std", "safer-ffi-gen?/std", "dep:thiserror", "indexmap"]
+std = ["mls-rs-codec/std", "zeroize/std", "safer-ffi-gen?/std", "dep:thiserror"]
 rfc_compliant = ["x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
@@ -24,11 +24,7 @@ test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
 mls-rs-codec = { version = "0.5.0", path = "../mls-rs-codec", default-features = false}
 zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
-base64 = { version = "0.21.0", default-features = false, features = ["alloc"]}
 thiserror = { version = "1.0.40", optional = true }
-enum-iterator = "1.1.3"
-num_enum = { version = "0.7", default-features = false}
-indexmap = { version = "2.0", optional = true }
 safer-ffi = { version = "0.1.3", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 maybe-async = "0.2.7"
