--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -57,9 +57,7 @@ thiserror = { version = "1.0.40", optional = true }
 itertools = { version = "0.12.0", default-features = false, features = ["use_alloc"]}
 cfg-if = "1"
 debug_tree = { version = "0.4.0", optional = true }
-spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex", "portable_atomic"] }
-portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"] }
-portable-atomic-util = { version = "0.1.2", default-features = false, features = ["alloc"] }
+spin = { version = "0.9.8", default-features = false, features = ["mutex", "spin_mutex"] }
 maybe-async = { version = "0.2.7" }
 
 # Optional dependencies
@@ -76,6 +74,11 @@ once_cell = { version = "1.18", optional = true }
 [target.'cfg(mls_build_async)'.dependencies]
 futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
 async-trait = "0.1.74"
+
+[target.'cfg(target_os = "none")'.dependencies]
+portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"] }
+portable-atomic-util = { version = "0.1.2", default-features = false, features = ["alloc"] }
+spin = { version = "0.9.8", default-features = false, features = ["portable_atomic"] }
 
 [target.'cfg(mls_build_async)'.dev-dependencies]
 futures-test = "0.3.25"
