Use atomic in core when available
This is the
[recommended](https://doc.rust-lang.org/alloc/sync/index.html) way to
check for atomic support in core.

--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -75,7 +75,7 @@ once_cell = { version = "1.18", optional = true }
 futures = { version = "0.3.25", default-features = false, features = ["alloc"]}
 async-trait = "0.1.74"
 
-[target.'cfg(target_os = "none")'.dependencies]
+[target.'cfg(not(target_has_atomic = "ptr"))'.dependencies]
 portable-atomic = { version = "1.5.1", default-features = false, features = ["critical-section"] }
 portable-atomic-util = { version = "0.1.2", default-features = false, features = ["alloc"] }
 spin = { version = "0.9.8", default-features = false, features = ["portable_atomic"] }
