--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -38,6 +38,8 @@ std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "mls-rs-core/ffi"]
 
+serde = ["mls-rs-core/serde", "zeroize/serde", "dep:serde"]
+
 # SQLite support
 sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
 sqlite-bundled = ["sqlite", "mls-rs-provider-sqlite/sqlite-bundled"]
@@ -69,6 +71,7 @@ arbitrary = { version = "1", features = ["derive"], optional = true }
 safer-ffi = { version = "0.1.3", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
 
 # Async mode dependencies
 [target.'cfg(mls_build_async)'.dependencies]
