--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -19,11 +19,11 @@ rfc_compliant = ["x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
 test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
-serde = ["dep:serde"]
+serde = ["dep:serde", "zeroize/serde"]
 
 [dependencies]
 mls-rs-codec = { version = "0.5.0", path = "../mls-rs-codec", default-features = false}
-zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive", "serde"] }
+zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 arbitrary = { version = "1", features = ["derive"], optional = true }
 thiserror = { version = "1.0.40", optional = true }
 safer-ffi = { version = "0.1.3", default-features = false, optional = true }
