--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -38,7 +38,8 @@ std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "mls-rs-core/ffi"]
 
-serde = ["mls-rs-core/serde", "zeroize/serde", "dep:serde"]
+serde = ["mls-rs-core/serde", "zeroize/serde", "dep:serde", "dep:hex"]
+hex_serde = ["serde", "mls-rs-core/hex_serde"]
 
 # SQLite support
 sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
@@ -72,6 +73,7 @@ safer-ffi = { version = "0.1.3", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
+hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
 
 # Async mode dependencies
 [target.'cfg(mls_build_async)'.dependencies]
