--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -19,8 +19,7 @@ rfc_compliant = ["x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
 test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
-serde = ["dep:serde", "zeroize/serde"]
-hex_serde = ["serde", "dep:hex"]
+serde = ["dep:serde", "zeroize/serde", "dep:hex"]
 
 [dependencies]
 mls-rs-codec = { version = "0.5.0", path = "../mls-rs-codec", default-features = false}
