--- a/mls-rs/Cargo.toml
+++ b/mls-rs/Cargo.toml
@@ -34,9 +34,11 @@ psk = []
 x509 = ["mls-rs-core/x509", "dep:mls-rs-identity-x509"]
 rfc_compliant = ["state_update", "private_message", "custom_proposal", "out_of_order", "psk", "x509", "prior_epoch", "by_ref_proposal", "mls-rs-core/rfc_compliant"]
 
-std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "safer-ffi-gen?/std", "zeroize/std", "dep:debug_tree", "dep:thiserror"]
+std = ["mls-rs-core/std", "mls-rs-codec/std", "mls-rs-identity-x509?/std", "hex/std", "futures/std", "itertools/use_std", "safer-ffi-gen?/std", "zeroize/std", "dep:debug_tree", "dep:thiserror", "serde?/std"]
 
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen", "mls-rs-core/ffi"]
+
+serde = ["mls-rs-core/serde", "zeroize/serde", "dep:serde", "dep:hex"]
 
 # SQLite support
 sqlite = ["std", "mls-rs-provider-sqlite/sqlite"]
@@ -69,6 +71,8 @@ arbitrary = { version = "1", features = ["derive"], optional = true }
 safer-ffi = { version = "0.1.3", default-features = false, optional = true }
 safer-ffi-gen = { version = "0.9.2", default-features = false, optional = true }
 once_cell = { version = "1.18", optional = true }
+serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
+hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
 
 # Async mode dependencies
 [target.'cfg(mls_build_async)'.dependencies]
