--- a/mls-rs-core/Cargo.toml
+++ b/mls-rs-core/Cargo.toml
@@ -18,8 +18,8 @@ std = ["mls-rs-codec/std", "zeroize/std", "safer-ffi-gen?/std", "dep:thiserror",
 rfc_compliant = ["x509"]
 ffi = ["dep:safer-ffi", "dep:safer-ffi-gen"]
 x509 = []
-test_suite = ["dep:serde", "dep:serde_json", "dep:hex", "dep:itertools"]
-serde = ["dep:serde", "zeroize/serde", "dep:hex", "dep:serde_bytes"]
+test_suite = ["serde", "dep:serde_json", "dep:itertools"]
+serde = ["dep:serde", "zeroize/serde", "hex/serde", "dep:serde_bytes"]
 
 [dependencies]
 mls-rs-codec = { version = "0.5.0", path = "../mls-rs-codec", default-features = false}
@@ -32,7 +32,7 @@ maybe-async = "0.2.7"
 
 serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
 serde_json = { version = "^1.0", optional = true }
-hex = { version = "^0.4.3", default-features = false, features = ["serde", "alloc"], optional = true }
+hex = { version = "^0.4.3", default-features = false, features = ["alloc"] }
 itertools = { version = "0.12", optional = true }
 serde_bytes = { version = "0.11", optional = true }
 
