Introduce mls-rs-uniffi
This new create is a thin wrapper around mls-rs which exposes a subset
of it’s interface using a [UniFFI-compatible][1] API.

We will expand this over the next few weeks to be a full API usable by
messaging apps on different platforms.

[1]: https://mozilla.github.io/uniffi-rs/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ members = [
     "mls-rs-crypto-hpke",
     "mls-rs-provider-sqlite",
     "mls-rs-codec",
-    "mls-rs-codec-derive"
+    "mls-rs-codec-derive",
+    "mls-rs-uniffi",
+    "mls-rs-uniffi/uniffi-bindgen",
 ]
 
 default-members = [
@@ -28,5 +30,6 @@ default-members = [
     "mls-rs-crypto-awslc",
     "mls-rs-crypto-webcrypto",
     "mls-rs-provider-sqlite",
-    "mls-rs-codec"
+    "mls-rs-codec",
+    "mls-rs-uniffi",
 ]
