--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -16,3 +16,5 @@ jobs:
         run: cargo install cargo-hack
       - name: Build one feature at a time
         run: cargo hack build --each-feature --workspace --exclude harness_client
+      - name: Check rust version
+        run: cargo hack check -p mls-rs --rust-version
