--- a/mls-rs-uniffi/Cargo.toml
+++ b/mls-rs-uniffi/Cargo.toml
@@ -24,3 +24,7 @@ uniffi = "0.26.0"
 
 [target.'cfg(mls_build_async)'.dependencies]
 tokio = { version = "1.36.0", features = ["sync"] }
+
+[dev-dependencies]
+tempfile = "3.10.0"
+uniffi_bindgen = "0.26.0"
