--- a/mls-rs-uniffi/Cargo.toml
+++ b/mls-rs-uniffi/Cargo.toml
@@ -18,7 +18,7 @@ name = "mls_rs_uniffi"
 async-trait = "0.1.77"
 maybe-async = "0.2.10"
 mls-rs = { path = "../mls-rs" }
-mls-rs-core = { path = "../mls-rs-core" }
+mls-rs-core = { path = "../mls-rs-core", features = ["uniffi"] }
 mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl" }
 thiserror = "1.0.57"
 uniffi = "0.26.0"
