--- a/mls-rs-uniffi/Cargo.toml
+++ b/mls-rs-uniffi/Cargo.toml
@@ -14,6 +14,10 @@ rust-version = "1.68.2"
 crate-type = ["lib", "cdylib"]
 name = "mls_rs_uniffi"
 
+[features]
+default = ["sqlite"]
+sqlite = ["mls-rs/sqlcipher-bundled"]
+
 [dependencies]
 async-trait = "0.1.77"
 maybe-async = "0.2.10"
