Simplify storages and tests since we now don't need to store storages separately

--- a/.github/workflows/interop_tests.yml
+++ b/.github/workflows/interop_tests.yml
@@ -1,5 +1,5 @@
 name: Interop Tests
-on: [pull_request]
+on: [pull_request,push]
 env:
   CARGO_TERM_COLOR: always
   SSH_AUTH_SOCK: /tmp/ssh_agent.sock
