--- a/mls-rs-uniffi/Cargo.toml
+++ b/mls-rs-uniffi/Cargo.toml
@@ -17,9 +17,9 @@ name = "mls_rs_uniffi"
 [dependencies]
 async-trait = "0.1.77"
 maybe-async = "0.2.10"
-mls-rs = { path = "../mls-rs" }
-mls-rs-core = { path = "../mls-rs-core" }
-mls-rs-crypto-openssl = { path = "../mls-rs-crypto-openssl" }
+mls-rs = { version = "0.39.0", path = "../mls-rs" }
+mls-rs-core = { version = "0.18.0", path = "../mls-rs-core" }
+mls-rs-crypto-openssl = { version = "0.9.0", path = "../mls-rs-crypto-openssl" }
 thiserror = "1.0.57"
 uniffi = "0.26.0"
 
