[uniffi] Fix compilation under `mls_build_async`
UniFFI added support for async traits in mozilla/uniffi-rs#1981, but
this is not yet released. This commit temporarily introduces a Git
dependency on UniFFI to let us test the async functionality which was
removed in #86.

An unrelated UniFFI change (mozilla/uniffi-rs#1840) made our existing
test fail.

--- a/mls-rs-uniffi/uniffi-bindgen/Cargo.toml
+++ b/mls-rs-uniffi/uniffi-bindgen/Cargo.toml
@@ -7,4 +7,4 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-uniffi = { version = "0.26.0", features = ["cli"] }
+uniffi = { git = "https://github.com/mozilla/uniffi-rs/", rev = "6b09f11", version = "0.26.0", features = ["cli"] }
