--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -7,7 +7,7 @@ jobs:
   SyncBuildAndTestS:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-13, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
@@ -20,6 +20,9 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Install Kotlin dependencies
+        uses: ./.github/workflows/install-kotlin-deps
+        if: runner.os != 'Windows'
       - uses: ilammy/setup-nasm@v1
         if: runner.os == 'Windows'
       - run: |
@@ -79,6 +82,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
         with:
           save-if: ${{ github.ref == 'refs/heads/main' }}
+      - name: Install Kotlin dependencies
+        uses: ./.github/workflows/install-kotlin-deps
       - name: Rust Fmt
         run: cargo fmt --all -- --check
       - name: Clippy Full RFC Compliance
@@ -95,6 +100,8 @@ jobs:
           save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Setup code coverage
         run: cargo install cargo-llvm-cov
+      - name: Install Kotlin dependencies
+        uses: ./.github/workflows/install-kotlin-deps
       - name: Run code coverage
         # Using `cargo llvm-cov show-env` lets us capture coverage
         # information from Python integration tests.
