Simplify Windows build steps into a single step
The commands depend on each other, so I think it’s clearer if they are
put into a single step.

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -18,15 +18,12 @@ jobs:
       - uses: dtolnay/rust-toolchain@stable
       - uses: ilammy/setup-nasm@v1
         if: runner.os == 'Windows'
-      - run: echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
-        if: runner.os == 'Windows'
-      - run: vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
-        if: runner.os == 'Windows'
-      - run: echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
-        if: runner.os == 'Windows'
-      - run: curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
-        if: runner.os == 'Windows'
-      - run: echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
+      - run: |
+          echo "VCPKG_ROOT=$env:VCPKG_INSTALLATION_ROOT" | Out-File -FilePath $env:GITHUB_ENV -Append
+          vcpkg install openssl:x64-windows-static-md sqlite3:x64-windows-static-md
+          echo "OPENSSL_DIR=C:/vcpkg/packages/openssl_x64-windows-static-md" | Out-File -FilePath $env:GITHUB_ENV -Append
+          curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
+          echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
       - name: Rust Fmt
         run: cargo fmt --all -- --check
