--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -25,12 +25,6 @@ jobs:
           curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
-      - name: Rust Fmt
-        run: cargo fmt --all -- --check
-      - name: Clippy Full RFC Compliance
-        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
-      - name: Clippy Bare Bones
-        run: cargo clippy --all-targets --no-default-features --features std,test_util --workspace -- -D warnings
       - name: Test Full RFC Compliance
         run: cargo test --all-features --verbose --workspace
       - name: Test Bare Bones
@@ -46,6 +40,21 @@ jobs:
       - name: Examples
         working-directory: mls-rs
         run: cargo run --example basic_usage
+  LintAndFormatting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: arduino/setup-protoc@v2
+        with:
+          version: "25.x"
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: dtolnay/rust-toolchain@stable
+      - name: Rust Fmt
+        run: cargo fmt --all -- --check
+      - name: Clippy Full RFC Compliance
+        run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+      - name: Clippy Bare Bones
+        run: cargo clippy --all-targets --no-default-features --features std,test_util --workspace -- -D warnings
   CodeCoverage:
     runs-on: ubuntu-latest
     steps:
