--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ members = [
     "mls-rs-ffi",
     "mls-rs-identity-x509",
     "mls-rs/test_harness_integration",
+    "mls-rs-crypto-cryptokit",
     "mls-rs-crypto-openssl",
     "mls-rs-crypto-rustcrypto",
     "mls-rs-crypto-awslc",
