Add a more properly structured KDF module

--- a/mls-rs-crypto-cryptokit/Cargo.toml
+++ b/mls-rs-crypto-cryptokit/Cargo.toml
@@ -14,3 +14,11 @@ serde_json = "1.0"
 
 [dev-dependencies]
 hex-literal = "0.4.1"
+
+[dependencies]
+maybe-async = "0.2.10"
+mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.18.0" }
+mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "0.10.0" }
+
+[target.'cfg(mls_build_async)'.dependencies]
+async-trait = "0.1.74"
