--- a/mls-rs-crypto-cryptokit/Cargo.toml
+++ b/mls-rs-crypto-cryptokit/Cargo.toml
@@ -9,10 +9,12 @@ keywords = ["mls", "mls-rs", "CryptoKit"]
 license = "Apache-2.0 OR MIT"
 
 [build-dependencies]
+# For parsing Swift outputs to build and link the bridge library
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
+# For test values, we can remove this once we use real mls-rs tests
 hex-literal = "0.4.1"
 
 [dependencies]
