--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -12,6 +12,9 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
+      - uses: Swatinem/rust-cache@v2
+        with:
+          save-if: ${{ github.ref == 'refs/heads/main' }}
       - name: Install cargo-hack
         run: cargo install cargo-hack
       - name: Build one feature at a time
