--- a/.github/workflows/no_std_build.yml
+++ b/.github/workflows/no_std_build.yml
@@ -12,6 +12,9 @@ jobs:
       with:
         targets: thumbv6m-none-eabi
         components: clippy
+    - uses: Swatinem/rust-cache@v2
+      with:
+        save-if: ${{ github.ref == 'refs/heads/main' }}
     - name: Clippy
       run: cargo +stable clippy --no-default-features -p mls-rs -- -D warnings
     - name: Test
@@ -22,5 +25,5 @@ jobs:
       run: cargo +nightly build --package mls-rs --lib --no-default-features --target thumbv6m-none-eabi
     - name: Build MLS Embedded Full RFC Compliance
       run: cargo +nightly build --package mls-rs --lib --no-default-features --features rfc_compliant --target thumbv6m-none-eabi
-    - name: Build rust crypto embedded 
+    - name: Build rust crypto embedded
       run: cargo +nightly build --package mls-rs-crypto-rustcrypto --no-default-features --target thumbv6m-none-eabi
