Add overall plumbing

--- a/mls-rs-crypto-cryptokit/Cargo.toml
+++ b/mls-rs-crypto-cryptokit/Cargo.toml
@@ -14,14 +14,15 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
-# For test values, we can remove this once we use real mls-rs tests
-hex-literal = "0.4.1"
+hex-literal = "0.4.1" # XXX(RLB) For test values, we can remove this once we use real mls-rs tests
 assert_matches = "1.5.0"
+mls-rs-core = { path = "../mls-rs-core", version = "0.18.0", features = ["test_suite"] }
 
 [dependencies]
 maybe-async = "0.2.10"
 mls-rs-core = { path = "../mls-rs-core", default-features = false, version = "0.18.0" }
 mls-rs-crypto-traits = { path = "../mls-rs-crypto-traits", default-features = false, version = "0.10.0" }
+zeroize = { version = "1", default-features = false, features = ["alloc", "zeroize_derive"] }
 
 [target.'cfg(mls_build_async)'.dependencies]
 async-trait = "0.1.74"
