--- a/mls-rs-crypto-cryptokit/Cargo.toml
+++ b/mls-rs-crypto-cryptokit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mls-rs-crypto-cryptokit"
-version = "0.9.0"
+version = "0.1.0"
 edition = "2021"
 description = "CryptoKit based CryptoProvider for mls-rs"
 homepage = "https://github.com/awslabs/mls-rs"
@@ -14,7 +14,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
 [dev-dependencies]
-hex-literal = "0.4.1" # XXX(RLB) For test values, we can remove this once we use real mls-rs tests
+hex-literal = "0.4.1"
 assert_matches = "1.5.0"
 mls-rs-core = { path = "../mls-rs-core", version = "0.18.0", features = ["test_suite"] }
 
