Attempt to address CI errors

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -27,6 +27,9 @@ jobs:
           curl -o C:/cacert.pem https://curl.se/ca/cacert.pem
           echo "SSL_CERT_FILE=C:/cacert.pem" | Out-File -FilePath $env:GITHUB_ENV -Append
         if: runner.os == 'Windows'
+      - run: |
+          sudo xcode-select -s /Applications/Xcode_15.0.app
+        if: runner.os == 'macOS'
       - name: Test Full RFC Compliance
         run: cargo test --all-features --verbose --workspace
       - name: Test Bare Bones
