[uniffi] Auto-download Kotlin dependencies
This makes `cargo test` automatically download the necessary jar files
used by the test code. The jars are cached in `$CARGO_TARGET_TMPDIR`,
i.e., in `target/tmp`.

--- a/mls-rs-uniffi/Cargo.toml
+++ b/mls-rs-uniffi/Cargo.toml
@@ -28,3 +28,4 @@ tokio = { version = "1.36.0", features = ["sync"] }
 
 [dev-dependencies]
 uniffi_bindgen = { git = "https://github.com/mozilla/uniffi-rs/", rev = "eeb785c", version = "0.27.0" }
+anyhow = "1"
