Add a crypto provider based on the Apple CryptoKit library (#148)
* Add a stub CryptoKit provider and Swift FFI bridge

* Add a more properly structured KDF module

* Update Swift module README

* Use enums and split KDF logic into its own file

* Implement random, hash, MAC functions

* Add AEAD functions

* Add CryptoKit create README

* Add checklist to README

* Add sign/verify functions

* Add KEM functions, except for derive()

* Add overall plumbing

* Use HPKE representation for KEM public keys

* Implement DeriveKeyPair

* Verify that Swift DeriveKeyPair passes test vectors

* Debug signature tests

* Update README

* Cleanup

* Attempt to address CI errors

* Attempt to address CI errors

* One more attempt to xcode-select the proper version

* Add CryptoKit provider to the table in the README

* Pin macOS runners to v14

* Respond to review by @mulmarta

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -7,7 +7,10 @@ jobs:
   SyncBuildAndTestS:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-13, windows-latest]
+        # XXX(RLB): It would be good to just use macos-latest here, but
+        # apparently if you do that, sometimes you get an older (not latest)
+        # version.  And we require v14 in order to build the CryptoKit provider.
+        os: [ubuntu-latest, macos-14, windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
     steps:
