--- a/.github/workflows/features.yml
+++ b/.github/workflows/features.yml
@@ -7,7 +7,11 @@ jobs:
   BuildAndTest:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        # XXX(RLB) According to the Github Runners repo, this should be the
+        # default, but without this line, we get  "error: 'cryptokit-bridge':
+        # package 'cryptokit-bridge' is using Swift tools version 5.9.0 but the
+        # installed version is 5.7.1"
+        os: [ubuntu-latest, macos-14]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
